backend/api/tests/integration/user/snapshots/integration__user__color__create.snap
---
source: tests/integration/user/color.rs
expression: body
---
{
  "colors": [
    {
      "r": 255,
      "g": 25,
      "b": 15,
      "a": 11
    },
    {
      "r": 255,
      "g": 25,
      "b": 15,
      "a": 12
    },
    {
      "r": 255,
      "g": 25,
      "b": 15,
      "a": 13
    },
    {
      "r": 255,
      "g": 25,
      "b": 15,
      "a": 255
    },
    {
      "r": 255,
      "g": 255,
      "b": 255,
      "a": 255
    },
    {
      "r": 255,
      "g": 0,
      "b": 0,
      "a": 255
    },
    {
      "r": 0,
      "g": 128,
      "b": 128,
      "a": 255
    },
    {
      "r": 0,
      "g": 168,
      "b": 107,
      "a": 255
    },
    {
      "r": 128,
      "g": 0,
      "b": 0,
      "a": 255
    },
    {
      "r": 210,
      "g": 124,
      "b": 19,
      "a": 255
    }
  ]
}
